hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_getProperties_002.php
<?php
$rc = new ReflectionClass("ReflectionClass");
echo "\nTest invalid arguments:";
$rc->getProperties('X');
$rc->getProperties('X', true);
?>
